--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Dev Starter</title>
+    <title>Preston Lantze</title>
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/favicons/favicon-48x48.png" sizes="48x48" />
@@ -22,7 +22,7 @@
 </head>
 <body>
     
-    <h1>Web Dev Starter</h1>
+    <h1></h1>
 
 </body>
 </html>
